# mlgui

./: Cargo.toml
src/: main.rs  settings.rs  utils.rs
src/app/: menubar.rs  mod.rs  treeview.rs
src/app/mainview/: mod.rs
src/app/mainview/editor/: component_list.rs  configs.rs  mod.rs  playground.rs
src/app/mainview/training/: mod.rs
src/components/: activation_functions.rs  layers.rs  mod.rs
src/utils/: consts.rs  enums.rs  loss_fn.rs  mod.rs
