[package]
name = "mlgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = { path = "../../tch-rs" }
fltk = { version = "1.4.25", features = ["use-ninja"] }
pyo3 = { version = "0.20.3", features = ["auto-initialize"] }
